# workey

./: .dockerignore  .env.example  .gitignore  README.md  package-lock.json  package.json  turbo.json
apps/api/: config.py  database.py  main.py  models.py  pyproject.toml  server.py  workey.db
apps/api/routers/: agents.py  applications.py  jobs.py  portfolio.py
apps/api/tests/: test_health.py
apps/api/workey_api/: __init__.py  config.py  database.py  main.py  models.py
apps/api/workey_api/routers/: __init__.py  agents.py  applications.py  jobs.py  portfolio.py
apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/components/: Contact.tsx  Hero.tsx  Nav.tsx  ProjectGrid.tsx  Skills.tsx
apps/web/src/components/dashboard/: AgentStatus.tsx  JobPipeline.tsx  StatsBar.tsx
apps/worker/: main.py  pyproject.toml
data/: achievements.yaml  positioning.yaml  projects.yaml  resume_master.yaml
docs/: architecture.md  demo_script.md  roadmap.md  setup.md
infra/: Dockerfile.api  Dockerfile.web  Dockerfile.worker  docker-compose.yml
scripts/: README.md  run_pipeline.py  seed.py
